[package]
name = "actions_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
anyhow = "1.0.86"
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.1.3"
pistol = "^2"
