[package]
name = "gha_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest_cookie_store = { version = "0.7.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10.4"
